testdata/l2geth/configMap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: l2geth
data:
  ETH1_SYNC_SERVICE_ENABLE: "true"
  ETH1_CONFIRMATION_DEPTH: "0"
  ETH1_HTTP: "http://l1chain-svc:8545"
  ETH1_CTC_DEPLOYMENT_HEIGHT: "8"
  RETRIES: "60"

  ROLLUP_TIMESTAMP_REFRESH: "1s"
  ROLLUP_STATE_DUMP_PATH: "http://deployer-svc:8081/state-dump.latest.json"
  ROLLUP_CLIENT_HTTP: "http://data-transport-layer-svc:7878"
  ROLLUP_ENFORCE_FEES: "false"
  ROLLUP_FEE_THRESHOLD_DOWN: "0.9"
  ROLLUP_FEE_THRESHOLD_UP: "1.1"
  ROLLUP_POLL_INTERVAL_FLAG: "500ms"
  ROLLUP_ENABLE_L2_GAS_POLLING: "true"

  RPC_ENABLE: "true"
  RPC_ADDR: "0.0.0.0"
  RPC_PORT: "8545"
  RPC_API: eth,net,rollup,web3,debug
  RPC_CORS_DOMAIN: "*"
  RPC_VHOSTS: "*"

  WS: "true"
  WS_ADDR: "0.0.0.0"
  WS_PORT: "8546"
  WS_API: eth,net,rollup,web3
  WS_ORIGINS: "*"

  CHAIN_ID: "17"
  DATADIR: /root/.ethereum
  GASPRICE: "0"
  L2_BLOCK_GAS_LIMIT: "15000000"
  GCMODE: "archive"
  IPC_DISABLE: "true"
  NETWORK_ID: "2090"
  NO_USB: "true"
  NO_DISCOVER: "true"
  TARGET_GAS_LIMIT: "15000000"
  USING_OVM: "true"

  BLOCK_SIGNER_KEY: "6587ae678cf4fc9a33000cdbf9f35226b71dcc6a4684a31203241f9bcfd55d27"
  BLOCK_SIGNER_ADDRESS: "0x00000398232E2064F896018496b4b44b3D62751F"
