testdata/l2geth/pv.yaml
apiVersion: v1
kind: PersistentVolume
metadata:
  name: l2geth-pv
  labels:
    app: l2geth
spec:
  capacity:
    storage: 2Gi
  volumeMode: Filesystem
  accessModes:
    - ReadWriteMany
  persistentVolumeReclaimPolicy: Retain
  storageClassName: efs-sc
  csi:
    driver: efs.csi.aws.com
    volumeHandle: fs-0f4f5fd74d237c59a
