testdata/l2geth/pvc.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: l2geth-pvc
spec:
  storageClassName: local-path
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 10Gi
